# Vela

./: .gitignore  CMakeLists.txt  README.md
config/: main.yaml  style.css
config/modules/: script_example.yaml  terminal_example.yaml
config/scripts/: script_example.sh  terminal_example.sh
src/: main.cpp
src/core/: app.cpp  app.hpp  askpassword.sh  config_manager.cpp  config_manager.hpp  logger.cpp  logger.hpp  notifier.cpp  notifier.hpp  tools.cpp  tools.hpp
src/ui/: windows.cpp  windows.hpp
